Set disabled attributes to buttons if ID box empty
(cherry picked from commit 13fdb10a5c1aa2cfa896a330263b958e585d3a4b)

--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -181,6 +181,16 @@ span.clear-input:hover {
     margin-left: 1.6em;
 }
 
+button#connect:disabled {
+    background: color(gray-bg);
+    color: color(lighter-text);
+}
+
+button#file-transfer:disabled {
+    background: color(gray-bg);
+    color: color(lighter-text);
+}
+
 div.connect-status {
     left: 240px;
     border-top: color(border) solid 1px;
